tests/typing/bad/testfile-lt3-1.scala
class A { def m() { var b: Boolean = null <= 1 } }
object Main { def main(args: Array[String]) { } }
